<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
    
    
    <!--  HDPService -->
    <string name="app_registration">App Registration</string>
    <string name="bluetooth_not_available">Bluetooth is not available</string>
    <string name="bluetooth_health_profile_not_available">Bluetooth health profile is not available</string>
    <string name="channel_connection">Channel Connection</string>
    <string name="channel_connection_desc">(some devices automatically initiate connection)</string>
    <string name="connect">Connect</string>
    <string name="connected">CONNECTED</string>
    <string name="connection_state">Connection State</string>
    <string name="data_ind">Data Indicator</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="empty"> </string>
    <string name="none">None...</string>
    <string name="ok">Okay</string>
    <string name="read_data">Reading data...</string>
    <string name="read_data_done">Done with reading data...</string>
    <string name="register">Register</string>
    <string name="status_create_channel">Create channel status: %d</string>
    <string name="status_destroy_channel">Destroy channel status: %d</string>
    <string name="status_msg">Status Message</string>
    <string name="status_reg">App registration status: %d</string>
    <string name="status_unreg">App unregistration status: %d</string>
    <string name="unregister">Unregister</string>
    
    <!--  WorkoutActivity -->
    <string name="Workout_Type">Workout Type:</string>
    <string name="heart_rate">heart rate</string>
    <string name="heart_range">heart-rate range</string>
    <string name="chronometer_initial_format">Initial format:<xliff:g id="initial-format">%</xliff:g></string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Reset">Reset</string>
    
    
    
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    
    <string name="title_not_connected">not connected</string>
    
     <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    
    <string name="notification_subtitle">Counting your steps</string>

    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>

    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    


    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>

    <string name="quit">Quit</string>

	
    <string name="app_name">Cardio Fit</string>
    <string name="start_workout">Start Workout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fitness_test">Fitness Test</string>
    
    <string name="title_edit_profile">Edit Profile</string>
    <string name="name">name</string>
    <string name="Name">Name</string>
    <string name="age">age</string>
    <string name="Age">Age</string>
    <string name="weight">weight</string>
    <string name="Weight">Weight</string>
    <string name="Height">Height</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    
    
    <string name="title_fitness_test">Fitness Test</string>
    
    
    
    <string name="title_start_workout">Start Workout</string>
    <string name="Play_Music">Play Music</string>
    <string name="Use_Heart_Monitor">Use Heart Monitor</string>
    <string-array name="workouts_array">
        <item>Lifting</item>
        <item>Running</item>
    </string-array>
    
    
    <string name="title_workout">Workout</string>
    
    
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Cardio Fit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>

</resources>
