<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditProfile" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name" 
     />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:text="@string/Age" 
     />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number" />
    
     <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAge"
        android:text="@string/Weight" 
     />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number" />
    
     <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextWeight"
        android:text="@string/Height" 
     />

    <EditText
        android:id="@+id/editTextHeightFt"
        android:layout_width="50dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:hint="@string/ft"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextHeightIn"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/editTextHeightFt"
        android:ems="10"
        android:hint="@string/in"
        android:inputType="number"
        android:paddingRight="50dip" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextHeightFt"
        android:text="@string/highHeartRate" />
    
    <EditText
        android:id="@+id/editTextHeartRateHigh"
        android:layout_width="50dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:hint="@string/highHeartRate"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextHeartRateHigh"
        android:text="@string/lowHeartRate" />
    <EditText
        android:id="@+id/editTextHeartRateLow"
        android:layout_width="50dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:hint="@string/lowHeartRate"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextHeartRateLow"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/textView4"
        android:onClick="onClick"
        android:text="@string/save" />

</RelativeLayout>